<resources>
    <string name="app_name">FXSW</string>
    <string name="action_settings">Settings</string>
    <string name="string_show_progress_dialog">Show ProgressDialog</string>
    <string name="notes">Notes</string>
    <string name="data_loading">Data is Loading</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="string_show_listview">show listview</string>
    <string name="title_activity_expan">ExpanActivity</string>
    <string name="string_show_expandable_listview">show expandable listview</string>

    <string name="title_contacts">CONTACTS LIST</string>
=======
    <string name="action_purchase">purchase</string>
    <string name="welcome_to_purchase">welcome to purchase</string>
    <string name="title_activity_fruit_detail">FruitDetailActivity</string>
    <string name="string_fruit_description">this is a info and it\'s good for your health.....</string>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="string_show_chat_activity">show chat activity</string>
    <string name="action_send">send</string>
    <string name="str_please_input_here">please input here</string>
    <string name="str_sender">message sender</string>
    <string name="title_activity_viewpager">ViewpagerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="string_show_viewpager_activity">show viewpager activity</string>
    <string name="discovery">发现</string>
    <string name="kecheng">课程</string>
    <string name="my">我的</string>
    <string name="action_send_broadcast">send boradcast</string>
    <string name="string_show_sendbroadcast_activity">show sendbroadcast activity</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="string_show_filebroadcast_activity">show file activity</string>
    <string name="title_activity_shared_preferences">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="string_show_mysetting_activity">show my setting</string>
    <string name="string_show_sqlite_activity">show sqlite activity</string>
    <string name="action_create_database">create database</string>
    <string name="action_add_data">add data</string>
    <string name="action_query_data">query data</string>
    <string name="action_delete_data">delete data</string>
    <string name="string_show_contentprovider">show content provider</string>
    <string name="title_activity_content_provider">ContentProviderActivity</string>
    <string name="string_show_notification">show notification</string>

</resources>
