<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_guide" tools:context=".GuideActivity">

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/button_progress_dialog"
       android:text="@string/string_show_progress_dialog"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_show_listview"
        android:text="@string/string_show_listview"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_show_expandablelistview"
        android:text="@string/string_show_expandable_listview"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_show_chat"
        android:text="@string/string_show_chat_activity"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_show_viewpager"
        android:text="@string/string_show_viewpager_activity"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_show_sendbroadcast"
        android:text="@string/string_show_sendbroadcast_activity"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_show_filebroadcast"
        android:text="@string/string_show_filebroadcast_activity"/>
    <!--<ImageView-->
        <!--android:layout_width="32dp"-->
        <!--android:layout_height="32dp"-->
        <!--android:src="@drawable/apple512"/>-->

</LinearLayout>
